Update board styling and fix moving board header on scroll

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -2,8 +2,8 @@
   <div class="board-header">
     <div>
       <h2 class="board-title center">
-        <app-favorite-button [boardCode]="selectedBoardCode" [isFavorite]="boardIsFavourite"></app-favorite-button
-        >{{ boardTitle }}
+        {{ boardTitle }}
+        <app-favorite-button [boardCode]="selectedBoardCode" [isFavorite]="boardIsFavourite"></app-favorite-button>
       </h2>
     </div>
     <div>
