Code Review Feedback

--- a/portal-frontend/src/styles/typography.scss
+++ b/portal-frontend/src/styles/typography.scss
@@ -18,6 +18,7 @@ $font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   font-family: Material Icons Outlined !important;
 }
 
+//TODO: Change these to use relative sizes are part of WCAG
 h1 {
   @include typography-style(38px, 700);
 }
