--- a/portal-frontend/src/app/shared/footer/footer.component.html
+++ b/portal-frontend/src/app/shared/footer/footer.component.html
@@ -1,11 +1,9 @@
 <footer>
-  <div>
-    Provincial Agricultural Land Commission © 2022
-  </div>
-  <div class='links'>
-    <a href=''>Disclaimer</a>
-    <a href=''>Privacy</a>
-    <a href=''>Accessibility</a>
-    <a href=''>Copyright</a>
+  <div>Provincial Agricultural Land Commission © {{ year }}</div>
+  <div class="links">
+    <a href="">Disclaimer</a>
+    <a href="">Privacy</a>
+    <a href="">Accessibility</a>
+    <a href="">Copyright</a>
   </div>
 </footer>
