Update menu hover, fav board, and column styling

--- a/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
+++ b/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
@@ -19,3 +19,9 @@ button.favorite-btn.gold {
     color: $grey-dark;
   }
 }
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
