--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -4,14 +4,15 @@
   padding: 8px 80px;
   border-bottom: 1px solid;
   background-color: $primary-color;
-  color: #fff;
+  color: $white;
 }
 
 .mat-toolbar {
   background-color: $primary-color;
 }
 
-.mat-toolbar-row, .mat-toolbar-single-row {
+.mat-toolbar-row,
+.mat-toolbar-single-row {
   padding: 0;
 }
 
@@ -28,8 +29,10 @@
   border: none;
   background: inherit;
   cursor: pointer;
-  color: #fff;
+  color: $white;
   font-size: 20px !important;
+  display: flex;
+  align-items: center;
 }
 
 button.mat-menu-item {
@@ -76,7 +79,7 @@ div.board-item {
 }
 
 .board-item:hover {
-  background-color: #f8f3f3;
+  background-color: $secondary-color-light;
 
   ::ng-deep .favorite-btn {
     visibility: visible;
@@ -94,13 +97,13 @@ div.board-item {
 
   button {
     text-align: left;
-    background-color: #fff;
+    background-color: $white;
     border: none;
     cursor: pointer;
   }
 
   button:hover {
-    background-color: #f8f3f3;
+    background-color: $secondary-color-light;
   }
 }
 
@@ -115,7 +118,7 @@ div.board-item {
   border: none;
   background-color: $primary-color;
   cursor: pointer;
-  color: #fff;
+  color: $white;
 
   .avatar-menu-arrow {
     font-size: 18px;
