--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
@@ -17,9 +17,9 @@
   top: 0;
   z-index: 1000;
   text-align: center;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 700;
-  padding: 4px 8px;
+  padding: 4px;
   height: 64px;
 }
 
