--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -25,4 +25,4 @@ $warning-color: #cc8b18;
 
 $dark-contrast-text: #000000;
 $light-contrast-text: $white;
-$pending-star: #d3d3d3;
+$pending-star: $grey;
