--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/colors';
 
 .card {
-  border: 1px solid #ccc;
   height: 160px;
   margin-bottom: 1rem !important;
   cursor: grab;
@@ -10,7 +9,9 @@
 }
 
 .card.paused {
-  opacity: 0.7;
+  opacity: 0.8;
+  background-color: #c3c3c3;
+  border: 1px solid $grey-dark;
 }
 
 .card-content {
@@ -49,7 +50,6 @@
   padding: 6px 0;
 
   mat-icon {
-    color: #ccc;
     text-align: center;
     transform: scale(0.75);
   }
@@ -77,7 +77,7 @@
   text-align: center;
   position: relative;
   background-color: #efefef;
-  border: 1px solid #929292;
+  border: 1px solid $grey;
   font-size: 16px;
   width: 280px;
   padding: 8px 0px;
