Add icons to application detail side nav

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -1,6 +1,10 @@
 <div class="layout">
   <div class="application">
-    <app-application-header [application]="application" [reconsiderations]="reconsiderations" [modifications]="modifications"></app-application-header>
+    <app-application-header
+      [application]="application"
+      [reconsiderations]="reconsiderations"
+      [modifications]="modifications"
+    ></app-application-header>
     <div class="content">
       <div class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
@@ -8,7 +12,9 @@
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
+            class="nav-item"
           >
+            <mat-icon>{{ route.icon }}</mat-icon>
             {{ route.menuTitle }}
           </div>
         </div>
