--- a/alcs-frontend/src/app/shared/application-header/application-header.component.scss
+++ b/alcs-frontend/src/app/shared/application-header/application-header.component.scss
@@ -12,7 +12,7 @@
 
 .header {
   padding: 16px 80px;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid $primary-color-dark;
 
   .heading {
     display: flex;
