Update side nav hover, date card, and button UI

--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="cardData.latestDecisionDate" class="decision-date-info">
+<div *ngIf="cardData.latestDecisionDate" class="decision-date-info" [ngClass]="{ paused: cardData.paused }">
   {{ cardData.latestDecisionDate | momentFormat }}
 </div>
 <mat-card
