--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -21,13 +21,12 @@
 }
 
 .child-content {
-  margin: 24px 0 0 24px;
+  margin: 24px 0 0 48px;
   flex-grow: 1;
 }
 
 .nav {
   background-color: $bg-color;
-  border-right: 1px solid $primary-color-dark;
   min-width: 240px;
   width: 240px;
   height: 100%;
@@ -37,28 +36,24 @@
   cursor: pointer;
 
   div {
-    padding: 12px;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    border-color: $bg-color;
+    padding: 12px 24px;
   }
 
   div.active {
     font-weight: bold;
     background-color: $primary-color-dark;
-    border-color: $primary-color-dark;
     color: $white;
 
     &:hover {
       background-color: $primary-color-dark;
-      border-color: $primary-color-dark;
+      border: none;
       color: $white;
     }
   }
 
   div:hover {
     background-color: $secondary-color-light;
-    border-color: $secondary-color-dark;
+    border-right: 4px solid $secondary-color-dark;
     color: $dark-contrast-text;
   }
 }
