--- a/alcs-frontend/src/styles/typography.scss
+++ b/alcs-frontend/src/styles/typography.scss
@@ -62,7 +62,7 @@ p,
 .body-large {
   @include typography-style(19px, 400);
   line-height: 24px;
-  color: $grey-dark
+  color: $grey-dark;
 }
 
 .body-small {
@@ -100,17 +100,16 @@ button {
 }
 
 .mention {
-  border-radius: 8px;
-  padding-left: 2px;
-  padding-right: 2px;
+  border-radius: 2px;
+  padding: 0 2px;
 }
 
 .mention.red {
-  color: #DC4146;
-  background: rgba(216, 41, 47, 0.1);
+  color: #a41e22;
+  background: rgba(216, 41, 47, 0.25);
 }
 
 .mention.green {
-  color: #073C1D;
-  background: rgba(46, 133, 64, 0.15) !important;
+  color: $primary-color-dark;
+  background: rgba(46, 133, 64, 0.25) !important;
 }
