ALCS-201: UX/UI Update (#231)
* Update board styling and fix moving board header on scroll

* Update menu hover, fav board, and column styling

* Update paused card styling and fix hidden rightmost column padding

* Add icons to application detail side nav

* Update ng-select styling to match custom theme colour

* Add migration file for card status and app type colour update

* Update app detail side nav and banner ui

* Update side nav hover, date card, and button UI

* Update paused card, comments, schedule app card, and ng-select border styling

--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -17,38 +17,53 @@
 .content {
   display: flex;
   flex-grow: 1;
-  padding: 0 80px;
+  padding-right: 80px;
 }
 
 .child-content {
-  margin: 24px 0 0 24px;
+  margin: 24px 0 0 48px;
   flex-grow: 1;
 }
 
 .nav {
-  min-width: 250px;
-  width: 250px;
-  border-right: 1px solid;
-  border-left: 1px solid;
+  background-color: $bg-color;
+  min-width: 240px;
+  width: 240px;
   height: 100%;
 }
 
 .nav-link {
   cursor: pointer;
-  border-bottom: 1px solid;
 
   div {
-    padding: 12px;
+    padding: 12px 24px;
   }
 
   div.active {
     font-weight: bold;
-    color: #fff;
     background-color: $primary-color-dark;
+    color: $white;
+
+    &:hover {
+      background-color: $primary-color-dark;
+      border: none;
+      color: $white;
+    }
   }
 
   div:hover {
-    color: #000;
-    background-color: $primary-color-light;
+    background-color: $secondary-color-light;
+    border-right: 4px solid $secondary-color-dark;
+    color: $dark-contrast-text;
+  }
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  white-space: pre-wrap;
+
+  .mat-icon {
+    padding-right: 32px;
   }
 }
