--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
@@ -1,6 +1,7 @@
+@import '../../../styles/colors.scss';
+
 .container {
   display: flex;
-  max-width: 100vw;
   margin-bottom: 32px;
   height: calc(100% - 32px);
   padding: 32px 80px 0 80px;
@@ -11,13 +12,11 @@
 }
 
 .column-header {
-  position: sticky;
-  top: 0;
-  background-color: #fff;
   z-index: 1000;
   text-align: center;
-  font-size: 18px;
-  padding: 4px 8px;
+  font-size: 17px;
+  font-weight: 700;
+  padding: 4px;
   height: 64px;
 }
 
@@ -37,8 +36,10 @@
 }
 
 .card-container {
-  border: 1px solid #999;
+  background-color: $grey-light;
+  border-radius: 4px;
+  color: $black;
   height: 100%;
-  padding: 11px;
+  padding: 12px;
   min-height: 400px;
 }
