--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -1,4 +1,13 @@
 <div>
-  <h3>ALCS Portal</h3>
+  <div class='header-row'>
+    <h3>ALCS Portal</h3>
+    <div>
+      <a routerLink='/create'>
+        <button color='accent' mat-flat-button>
+          Create Application
+        </button>
+      </a>
+    </div>
+  </div>
   <p>Welcome to the ALCS Portal {{ name }}</p>
 </div>
