pre-populate default value

--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -27,7 +27,7 @@
 
       <div class="full-grid-line toggle-group">
         <mat-label class="toggle-label">Reconsideration Type *</mat-label>
-        <mat-button-toggle-group id="reviewOutcome" formControlName="type" name="reviewOutcome">
+        <mat-button-toggle-group id="reviewOutcome" formControlName="type" name="reviewOutcome" (change)="onTypeReconsiderationChange($event.value)">
           <mat-button-toggle *ngFor="let type of codes" value="{{ type.code }}">{{ type.label }}</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
