--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -27,7 +27,12 @@
 
       <div class="full-grid-line toggle-group">
         <mat-label class="toggle-label">Reconsideration Type *</mat-label>
-        <mat-button-toggle-group id="reviewOutcome" formControlName="type" name="reviewOutcome" (change)="onTypeReconsiderationChange($event.value)">
+        <mat-button-toggle-group
+          id="reviewOutcome"
+          formControlName="type"
+          name="reviewOutcome"
+          (change)="onTypeReconsiderationChange($event.value)"
+        >
           <mat-button-toggle *ngFor="let type of codes" value="{{ type.code }}">{{ type.label }}</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
@@ -42,7 +47,11 @@
       </div>
 
       <mat-form-field
-        *ngIf="typeControl.value === '33' && reviewOutcomeCodeControl.value !== 'PEN'"
+        *ngIf="
+          typeControl.value === '33' &&
+          reviewOutcomeCodeControl.value !== 'PEN' &&
+          reviewOutcomeCodeControl.value !== null
+        "
         appearance="outline"
         class="date-picker full-grid-line"
       >
