--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -5,26 +5,26 @@
 }
 
 .file-drag-drop {
-  border: 2px dashed rgba($grey-dark, 0.5);
-  border-radius: 4px;
+  border: 0.2rem dashed rgba($grey-dark, 0.5);
+  border-radius: 0.4rem;
   width: 100%;
 }
 
 .icon {
-  font-size: 80px;
+  font-size: 8rem;
   color: $grey-dark;
 }
 
 .drag-text {
   color: $grey-dark;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: bold;
-  margin-top: 1em;
+  margin-top: 1rem;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2em;
+  padding: 2rem;
 }
