--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
@@ -24,7 +24,6 @@
 }
 
 .unassigned-circle {
-
   ::ng-deep.avatar-circle {
     background-color: $grey;
   }
@@ -55,6 +54,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  span {
+    width: fit-content;
+  }
 }
 
 .subtext {
